# claude-voice-input-channel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/brainstorms/: 2026-04-15-macos-support-brainstorm.md
docs/plans/: 2026-04-11-feat-voice-stt-claude-code-channel-plan.md  2026-04-12-refactor-collapse-daemon-into-plugin-plan.md  2026-04-15-feat-macos-support-plan.md
plugin/: .mcp.json  config.template  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/channel/: package.json  voice-stt-channel.ts
plugin/commands/: install.md
plugin/src/voice_stt/: __init__.py  cli.py  daemon.py  singleton.py  socket_server.py
scripts/: claude-voice  install-systemd-units  voice-stt-svc  xbindkeysrc.example
scripts/systemd/: voice-stt-ptt.service.in  voice-sttd.service.in
src/voice_stt/: __init__.py  client.py  config.py  daemon.py  ptt_listener.py  singleton.py
