[project]
name = "voice-stt"
version = "0.1.0"
description = "Local push-to-talk speech-to-text daemon (faster-whisper + CUDA)"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.3",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
    "evdev>=1.6",
]

[project.scripts]
voice-stt = "voice_stt.client:main"
voice-sttd = "voice_stt.daemon:main"
voice-stt-ptt = "voice_stt.ptt_listener:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_stt"]
